substrate/primitives/api/test/tests/ui/deprecation_info.stderr
error: Invalid deprecation attribute: missing `note`
               help: the following are the possible correct uses
       |
       |     #[deprecated = "reason"]
       |
       |     #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
       |
       |     #[deprecated]
       |
  --> tests/ui/deprecation_info.rs:20:3
   |
20 |         #[deprecated(unknown_kw = "test")]
   |         ^

error: malformed `deprecated` attribute input
  --> tests/ui/deprecation_info.rs:24:3
   |
24 |         #[deprecated = 5]
   |         ^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
24 |         #[deprecated = "reason"]
   |
24 |         #[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason")]
   |
24 |         #[deprecated]
   |

error[E0541]: unknown meta item 'unknown_kw'
  --> tests/ui/deprecation_info.rs:20:16
   |
20 |         #[deprecated(unknown_kw = "test")]
   |                      ^^^^^^^^^^^^^^^^^^^ expected one of `since`, `note`

error[E0565]: literal in `deprecated` value must be a string
  --> tests/ui/deprecation_info.rs:22:24
   |
22 |         #[deprecated(since = 5)]
   |                              ^
